--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textTotalIncome"
         tools:text="Total de Despesas:" />
 
+    <include
+        layout="@layout/fragment_main_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTotalExpenses"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/textTotalIncome"
         android:layout_width="wrap_content"
