--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -106,15 +106,15 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_margin="10dp"
-        app:fabCustomSize="80dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
         android:contentDescription="Confirm Income"
         app:backgroundTint="@color/green_check"
+        app:fabCustomSize="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/baseline_add_24" />
+        app:srcCompat="@drawable/check_white_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
