fixing brazilian real value in currency texts, needs improvments

--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -18,12 +18,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <com.blackcat.currencyedittext.CurrencyEditText
             android:id="@+id/editExpenseValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:ems="10"
+            app:decimal_digits="0"
             android:gravity="end"
             android:hapticFeedbackEnabled="false"
             android:hint="R$ 00.00"
