--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,16 +20,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="4dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textMainWelcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:paddingLeft="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
@@ -39,13 +37,35 @@
                 android:textStyle="bold"
                 tools:text="TextMainWelcome" />
 
-            <ImageView
-                android:id="@+id/buttonExit"
+            <LinearLayout
+                android:id="@+id/linearLogout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:contentDescription="logout"
-                app:srcCompat="@drawable/baseline_power_settings_new_24" />
+                android:gravity="end"
+                android:orientation="vertical"
+                android:padding="2dp">
+
+                <ImageView
+                    android:id="@+id/buttonExit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:contentDescription="logout"
+                    app:srcCompat="@drawable/baseline_power_settings_new_24" />
+
+                <TextView
+                    android:id="@+id/textExit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="SAIR"
+                    android:textColor="@color/casaflow"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <androidx.appcompat.widget.Toolbar
