--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -117,16 +117,17 @@
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/purple_700"
-        android:padding="18dp"
         android:text="Cadastrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:passwordToggleEnabled="false"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPasswordField" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPasswordField"
+        app:passwordToggleEnabled="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
