--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Criar nova conta"
+        android:text="Nova conta"
         android:textColor="@color/purple_500"
         android:textSize="24sp"
         android:textStyle="bold"
