--- a/app/src/main/res/layout/intro_register.xml
+++ b/app/src/main/res/layout/intro_register.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19999999"
+        app:layout_constraintVertical_bias="0.20"
         app:srcCompat="@drawable/cinco" />
 
     <TextView
@@ -51,11 +51,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:background="@color/purple_700"
+        android:background="@color/purple_600"
         android:onClick="startRegistering"
         android:text="Criar nova conta"
         android:textColor="@android:color/white"
         android:textStyle="bold"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +72,7 @@
         android:background="@color/casaflow"
         android:onClick="startLogging"
         android:text="Já tenho conta"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/purple_500"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
